opam-version: "1.2"
name:         "duff"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/duff"
bug-reports:  "https://github.com/dinosaure/duff/issues"
dev-repo:     "https://github.com/dinosaure/duff.git"
doc:          "https://dinosaure.github.io/duff/"
license:      "MIT"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune"     {build}
  "fmt"
  "cstruct"
  "cmdliner" {>= "1.0.2"}
  "logs"     {>= "0.6.2"}
  "fmt"      {>= "0.8.5"}
  "bos"      {>= "0.2.0"}
  "fpath"    {>= "0.7.0"}
]

available: [ocaml-version >= "4.03.0"]
